提交测试代码

--- a/Mysql_db/db.ini
+++ b/Mysql_db/db.ini
@@ -1,5 +1,5 @@
 [all_db]
-AUTO=192.168.2.231>3306>opsa>pass123456>bi
+AUTO=192.168.2.231>3306>opsa>pass123456>tms
 vip=192.168.2.231>3306>opsa>pass123456>vip
 
 
