--- a/login_api/user_name.ini
+++ b/login_api/user_name.ini
@@ -6,7 +6,9 @@ zhukuankuan = 18900001010>888888
 chenyanyan = 18900001207>888888
 zhuchunjiao = 18900001227>888888
 
+[user_name_password_uat]
 
+xuefei1 = 150505636910>8888881
 
 
 
