提交测试代码

--- a/login_api/user_name.ini
+++ b/login_api/user_name.ini
@@ -5,6 +5,7 @@ jiangfengyu = 18900001156 > 888888
 zhukuankuan = 18900001010 > 888888
 chenyanyan = 18900001207 > 888888
 zhuchunjiao = 18900001227 > 888888
+qinchuanxiu = 18900301077 > 888888
 
 [user_name_password_uat]
 
